# Twenty-Dots-Game

./: .replit  DEPLOY_TO_RENDER.md  LANDMINE_FEATURE.md  NETWORK_README.md  POWER_CARDS_README.md  Procfile  README.md  README_DEPLOYMENT.md  ai_player.py  create_logo.py  game_server.py  gui_game.py  gui_game_network.py  index.html  launcher.py  network_client.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_online_server.bat  start_servers.py  twenty_dots.py  web_client.html  web_client_enhanced.html  web_client_old.html  web_server.py
game-server/: index.js  package-lock.json  package.json
public/: index.html
src/: App.jsx  MultiplayerApp.jsx  SinglePlayerApp.jsx  socket.js
src/components/: BackgroundDots.jsx  Board.jsx  DiscardPiles.jsx  Hand.jsx  TwentyDotsLogo.jsx
src/logic/: board.js  deck.js  gameRules.js
