[tool.poetry]
name = "twenty-dots-multiplayer"
version = "1.0.0"
description = "Twenty Dots Online Multiplayer Game"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-socketio = "^5.3.5"
flask-cors = "^4.0.0"
python-socketio = "^5.10.0"
eventlet = "^0.33.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
